--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-05 00:42+0300\n"
-"PO-Revision-Date: 2024-10-05 00:45+0300\n"
+"POT-Creation-Date: 2024-10-06 00:22+0300\n"
+"PO-Revision-Date: 2024-10-06 00:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -5167,6 +5167,16 @@ msgstr "Free"
 #: state/models/state.py:38
 msgid "Выдаётся министром"
 msgstr "Issued by minister"
+
+#: state/templates/state/redesign/set_mandate.html:46
+msgctxt "set_mandate"
+msgid "Выдача мандата"
+msgstr "Issuance of a mandate"
+
+#: state/templates/state/redesign/set_mandate.html:189
+msgctxt "set_mandate"
+msgid "выдать"
+msgstr "issue"
 
 #: state/templates/state/redesign/state_view.html:143
 msgid "Столица"
