--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-06 20:04+0300\n"
-"PO-Revision-Date: 2024-10-06 20:09+0300\n"
+"POT-Creation-Date: 2024-10-06 22:06+0300\n"
+"PO-Revision-Date: 2024-10-06 22:08+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -4909,17 +4909,14 @@ msgid "Региональные налоги"
 msgstr ""
 
 #: region/templates/region/redesign/region_view.html:220
-#: state/templates/state/redesign/state_view.html:158
 msgid "На финансирование"
 msgstr ""
 
 #: region/templates/region/redesign/region_view.html:221
-#: state/templates/state/redesign/state_view.html:159
 msgid "На добычу"
 msgstr ""
 
 #: region/templates/region/redesign/region_view.html:222
-#: state/templates/state/redesign/state_view.html:160
 msgid "На торговлю"
 msgstr ""
 
@@ -5166,13 +5163,114 @@ msgctxt "skills"
 msgid "Нет навыков в очереди"
 msgstr "No skills in queue"
 
+#: state/models/state.py:27
+msgctxt "state_view"
+msgid "Временное правительство"
+msgstr "Provisional Government"
+
+#: state/models/state.py:28
+msgctxt "state_view"
+msgid "Президентская республика"
+msgstr "Presidential Republic"
+
 #: state/models/state.py:37
+msgctxt "state_view"
 msgid "Свободная"
 msgstr "Free"
 
 #: state/models/state.py:38
+msgctxt "state_view"
 msgid "Выдаётся министром"
 msgstr "Issued by minister"
+
+#: state/templates/state/redesign/gov/executives.html:24
+#: state/templates/state/redesign/gov/executives.html:34
+msgctxt "executives"
+msgid "Президент"
+msgstr "President"
+
+#: state/templates/state/redesign/gov/executives.html:36
+msgctxt "executives"
+msgid "Место вакантно"
+msgstr "Vacant place"
+
+#: state/templates/state/redesign/gov/executives.html:64
+msgctxt "executives"
+msgid "Добавить министра"
+msgstr "Add Minister"
+
+#: state/templates/state/redesign/gov/government.html:179
+msgctxt "government"
+msgid "Парламент"
+msgstr "Parliament"
+
+#: state/templates/state/redesign/gov/government.html:214
+msgctxt "government"
+msgid "Независимый регион"
+msgstr "Free region"
+
+#: state/templates/state/redesign/gov/government.html:233
+msgctxt "government"
+msgid "выборы"
+msgstr "elections"
+
+#: state/templates/state/redesign/gov/government.html:237
+msgctxt "government"
+msgid "Выборы"
+msgstr "Elections"
+
+#: state/templates/state/redesign/gov/government.html:243
+msgctxt "government"
+msgid "основать государство"
+msgstr "Found a state"
+
+#: state/templates/state/redesign/gov/government.html:264
+msgctxt "government"
+msgid "Столица"
+msgstr "Capital"
+
+#: state/templates/state/redesign/gov/government.html:287
+msgctxt "government"
+msgid "законопроекты"
+msgstr "bills"
+
+#: state/templates/state/redesign/gov/government.html:303
+msgctxt "government"
+msgid "новый"
+msgstr "new bill"
+
+#: state/templates/state/redesign/gov/government.html:319
+msgctxt "government"
+msgid "министр"
+msgstr "minister"
+
+#: state/templates/state/redesign/gov/government.html:337
+msgctxt "government"
+msgid "история"
+msgstr "history"
+
+#: state/templates/state/redesign/gov/government.html:352
+msgctxt "government"
+msgid "парламент"
+msgstr "parliament"
+
+#: state/templates/state/redesign/gov/government.html:367
+msgctxt "government"
+msgid "казна"
+msgstr "treasury"
+
+#: state/templates/state/redesign/gov/parliament.html:46
+msgctxt "parliament"
+msgid "мест"
+msgstr ""
+
+#: state/templates/state/redesign/gov/parliament.html:116
+#, fuzzy
+#| msgctxt "party_manage"
+#| msgid "Управление партией"
+msgctxt "parliament"
+msgid "нет парламентских партий"
+msgstr "Party management"
 
 #: state/templates/state/redesign/set_mandate.html:46
 #: state/views/set_mandate_view.py:35
@@ -5185,17 +5283,122 @@ msgctxt "set_mandate"
 msgid "выдать"
 msgstr "issue"
 
+#: state/templates/state/redesign/state_view.html:69
+msgctxt "state_view"
+msgid "Инфо"
+msgstr "Info"
+
+#: state/templates/state/redesign/state_view.html:84
+msgctxt "state_view"
+msgid "Регионы"
+msgstr "Regions"
+
+#: state/templates/state/redesign/state_view.html:99
+msgctxt "state_view"
+msgid "Партии"
+msgstr "Parties"
+
+#: state/templates/state/redesign/state_view.html:114
+msgctxt "state_view"
+msgid "Казна"
+msgstr "Treasury"
+
+#: state/templates/state/redesign/state_view.html:125
+msgctxt "state_view"
+msgid "Форма правления"
+msgstr "Form of government"
+
+#: state/templates/state/redesign/state_view.html:128
+#: state/templates/state/redesign/state_view.html:130
+msgctxt "state_view"
+msgid "Президент"
+msgstr "President"
+
+#: state/templates/state/redesign/state_view.html:130
+msgctxt "state_view"
+msgid "не избран"
+msgstr "not elected"
+
+#: state/templates/state/redesign/state_view.html:133
+msgctxt "state_view"
+msgid "Начало срока"
+msgstr "Term beginning, since"
+
+#: state/templates/state/redesign/state_view.html:141
+msgctxt "state_view"
+msgid "Жителей"
+msgstr "Residents"
+
+#: state/templates/state/redesign/state_view.html:142
+msgctxt "state_view"
+msgid "Партий"
+msgstr "Parties"
+
 #: state/templates/state/redesign/state_view.html:143
+msgctxt "state_view"
 msgid "Столица"
-msgstr ""
+msgstr "Capital"
 
 #: state/templates/state/redesign/state_view.html:144
+msgctxt "state_view"
 msgid "Прописка"
 msgstr "Residency"
 
+#: state/templates/state/redesign/state_view.html:145
+msgctxt "state_view"
+msgid "Дата основания"
+msgstr "Foundation date"
+
+#: state/templates/state/redesign/state_view.html:151
+msgctxt "state_view"
+msgid "Баланс электросети"
+msgstr "Power grid balance"
+
 #: state/templates/state/redesign/state_view.html:157
+msgctxt "state_view"
 msgid "Государственные налоги"
-msgstr ""
+msgstr "State taxes"
+
+#: state/templates/state/redesign/state_view.html:158
+msgctxt "state_view"
+msgid "На финансирование"
+msgstr "Funding"
+
+#: state/templates/state/redesign/state_view.html:159
+msgctxt "state_view"
+msgid "На добычу"
+msgstr "Mining"
+
+#: state/templates/state/redesign/state_view.html:160
+msgctxt "state_view"
+msgid "На торговлю"
+msgstr "Trading"
+
+#: state/templates/state/redesign/state_view.html:172
+#: state/templates/state/redesign/state_view.html:204
+msgctxt "state_view"
+msgid "Регион"
+msgstr "Region"
+
+#: state/templates/state/redesign/state_view.html:173
+msgctxt "state_view"
+msgid "Жители"
+msgstr "Residents"
+
+#: state/templates/state/redesign/state_view.html:174
+msgctxt "state_view"
+msgid "Запасы"
+msgstr "Stocks"
+
+#: state/templates/state/redesign/state_view.html:201
+msgctxt "state_view"
+msgid "Название"
+msgstr "Title"
+
+#: state/templates/state/redesign/state_view.html:202
+msgctxt "state_view"
+msgid "Размер"
+msgstr "Size"
 
 #: storage/migrations/0067_auto_20230715_1635.py:13 storage/models/good.py:25
 #: storage/models/storage.py:30
